--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-
-<!-- Mirrored from likeabawz.dk/exill/demo/kitzu/template/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 27 Aug 2022 22:25:58 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
   <!-- Required meta tags-->
   <meta charset="utf-8">
   <!-- Title-->
-  <title>Kitzu - Personal Portfolio Template</title>
+  <title>Paul-Caleb Otokolo - My Portfolio</title>
   <!-- Description-->
   <meta name="description" content="Personal Portfolio Template">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -423,26 +421,26 @@
               <!-- Thumbnail list-->
               <div class="portfolio-grid row">
                 <!-- Single item-->
-                <div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="img/item-1.jpg" data-lightbox>
-                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/item-1.jpg">
+                <div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="https://paulotokolo.github.io/qrcode/" target="_blank">
+                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/pv5K28zVepE-HD.jpg">
                       <div class="item-content">
-                        <h6 class="content-title">Label Tag Mockup</h6><span class="content-more">More Info</span>
+                        <h6 class="content-title">QR Code Generator</h6><span class="content-more">More Info</span>
                       </div>
                     </div>
                   </a></div>
                 <!-- Single item-->
-                <div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item" href="img/item-2.jpg" data-lightbox>
-                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/item-2.jpg">
+                <div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item" href="https://paulotokolo.github.io/Image-Editor/" target="_blank">
+                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/image-editor.jpg">
                       <div class="item-content">
-                        <h6 class="content-title">3D Bag Mockup</h6><span class="content-more">More Info</span>
+                        <h6 class="content-title">Image Editor</h6><span class="content-more">More Info</span>
                       </div>
                     </div>
                   </a></div>
                 <!-- Single item-->
-                <div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="img/item-3.jpg" data-lightbox>
-                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/item-3.jpg">
+                <div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="https://paulotokolo.github.io/mini-music-player/" target="_blank">
+                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/music.png">
                       <div class="item-content">
-                        <h6 class="content-title">Modern Bag Design</h6><span class="content-more">More Info</span>
+                        <h6 class="content-title">Mini Music Player</h6><span class="content-more">More Info</span>
                       </div>
                     </div>
                   </a></div>
@@ -450,7 +448,7 @@
                 <div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="img/item-4.jpg" data-lightbox>
                     <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/item-4.jpg">
                       <div class="item-content">
-                        <h6 class="content-title">Coffee Cup Design</h6><span class="content-more">More Info</span>
+                        <h6 class="content-title">Coming Soon...</h6><span class="content-more">More Info</span>
                       </div>
                     </div>
                   </a></div>
@@ -700,5 +698,4 @@
 </body>
 
 
-<!-- Mirrored from likeabawz.dk/exill/demo/kitzu/template/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 27 Aug 2022 22:27:01 GMT -->
 </html>
