new commit again

--- a/index.html
+++ b/index.html
@@ -331,13 +331,31 @@
                     </div>
                   </div>
                   <div class="single-skill" data-percentage="100">
-                    <div class="skill-info"><span class="skill-name">Laravel</span><span class="skill-percentage"></span></div>
+                    <div class="skill-info"><span class="skill-name"><b class="section-title">Laravel</b></span><span class="skill-percentage"></span></div>
                     <div class="progress skill-progress">
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                   <div class="single-skill" data-percentage="80">
                     <div class="skill-info"><span class="skill-name">JavaScript</span><span class="skill-percentage"></span></div>
+                    <div class="progress skill-progress">
+                      <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                  <div class="single-skill" data-percentage="100">
+                    <div class="skill-info"><span class="skill-name">Product Research</span><span class="skill-percentage"></span></div>
+                    <div class="progress skill-progress">
+                      <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                  <div class="single-skill" data-percentage="100">
+                    <div class="skill-info"><span class="skill-name">Canva</span><span class="skill-percentage"></span></div>
+                    <div class="progress skill-progress">
+                      <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                  <div class="single-skill" data-percentage="100">
+                    <div class="skill-info"><span class="skill-name">Google Analytics</span><span class="skill-percentage"></span></div>
                     <div class="progress skill-progress">
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -357,7 +375,25 @@
                     </div>
                   </div>
                   <div class="single-skill" data-percentage="100">
-                    <div class="skill-info"><span class="skill-name">Work Ethic</span><span class="skill-percentage"></span></div>
+                    <div class="skill-info"><span class="skill-name">Google Adwords & Keyword Research</span><span class="skill-percentage"></span></div>
+                    <div class="progress skill-progress">
+                      <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                  <div class="single-skill" data-percentage="100">
+                    <div class="skill-info"><span class="skill-name">Facebook Ads </span><span class="skill-percentage"></span></div>
+                    <div class="progress skill-progress">
+                      <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                  <div class="single-skill" data-percentage="100">
+                    <div class="skill-info"><span class="skill-name">Social Media Marketing</span><span class="skill-percentage"></span></div>
+                    <div class="progress skill-progress">
+                      <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                  <div class="single-skill" data-percentage="100">
+                    <div class="skill-info"><span class="skill-name">Influencer Marketing</span><span class="skill-percentage"></span></div>
                     <div class="progress skill-progress">
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
