--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <h2 class="content-subtitle">Who am i?</h2>
                     <h6 class="content-title">I'm Paul-Caleb Otokolo, a Full-Stack Web Developer and Designer</h6>
                     <div class="content-description">
-                      <p>I am a freelancer based in the Abuja, Nigeria and I have been developing noteworthy UX/UI designs and websites for years, which comply with the latest design trends. I help convert a vision and an idea into meaningful and useful products. Having a sharp eye for product evolution helps me prioritize tasks, iterate fast and deliver faster.</p>
+                      <p>I am a freelancer based in the Abuja, Nigeria and I have been developing noteworthy UX/UI designs and websites for years, which comply with the latest design trends. I help convert a vision and an idea into meaningful and useful products. Having a sharp eye for product evolution helps me prioritize tasks, iterate fast and deliver faster. Some of my skills are Logic Building and Elementary Programming, Building Next Generation Websites, Database Management, Application Programming, Introduction to Cloud Computing, Search Engine Optimization, Java, Introduction to Web and Entreprise Applications, Web Component Development(Servlets JSP), Architecting Applications for the Web(JSF Struts), Google App Engine with JAva, Google Android Development, Software Project Management, Google Advertising Fundamentals, Google Analytics, Securing Web Applications, Advanced Java, Working with Cloud Computing, Entreprise Application Development, Creating Services for the Web & Developing Applications for Wireless Devices. I'm currently learning Python and ReactJs.</p>
                     </div>
                     <address class="content-info">
                       <div class="row">
@@ -124,8 +124,8 @@
                         </div>
                       </div>
                       <div class="row">
-                        <div class="col-12 col-md-6 single-info"><span>Age:</span>
-                          <p>24</p>
+                        <div class="col-12 col-md-6 single-info"><span>Phone:</span>
+                          <p><a href="wa.me/2348068243327" target="_blank">+234 806 824 3327</a></p>
                         </div>
                         <div class="col-12 col-md-6 single-info"><span>From:</span>
                           <p>Nigeria</p>
@@ -138,55 +138,6 @@
                         <li class="list-inline-item"><a href="https://www.linkedin.com/in/paul-caleb-otokolo-1325811b4/" target="_blank"><i class="icon ion-logo-linkedin"></i></a></li>
                       </ul>
                     </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Services section-->
-            <div class="services-section single-section">
-              <div class="row">
-                <div class="col-12">
-                  <div class="section-heading">
-                    <p class="section-description">Services i offer to my clients</p>
-                    <h2 class="section-title">My Services</h2>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <!-- Single service-->
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="single-service"><i class="icon service-icon ion-logo-css3"></i>
-                    <h6 class="service-title">HTML/CSS</h6>
-                  </div>
-                </div>
-                <!-- Single service-->
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="single-service"><i class="icon service-icon ion-md-images"></i>
-                    <h6 class="service-title">LARAVEL</h6>
-                  </div>
-                </div>
-                <!-- Single service-->
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="single-service"><i class="icon service-icon ion-logo-ionic"></i>
-                    <h6 class="service-title">VUE JS</h6>
-                  </div>
-                </div>
-                <!-- Single service-->
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="single-service"><i class="icon service-icon ion-logo-laravel"></i>
-                    <h6 class="service-title">Web Development</h6>
-                  </div>
-                </div>
-                <!-- Single service-->
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="single-service"><i class="icon service-icon ion-md-move"></i>
-                    <h6 class="service-title">MYSQL</h6>
-                  </div>
-                </div>
-                <!-- Single service-->
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="single-service"><i class="icon service-icon ion-ios-rocket"></i>
-                    <h6 class="service-title">CANVA</h6>
                   </div>
                 </div>
               </div>
@@ -283,14 +234,6 @@
                       <h5 class="item-title">Advanced Diploma in Software Engineering</h5><span class="item-details">Aptech Computer Education / 2015 - 2017</span>
                       <p class="item-description">Courses: Logic Building and Elementary Programming, Building Next Generation Websites, Database Management, Application Programming, Introduction to Cloud Computing, Search Engine Optimization, Java, Introduction to Web and Entreprise Applications, Web Component Development(Servlets JSP), Architecting Applications for the Web(JSF Struts), Google App Engine with JAva, Google Android Development, Software Project Management, Google Advertising Fundamentals, Google Analytics, Securing Web Applications, Advanced Java, Working with Cloud Computing, Entreprise Application Development, Creating Services for the Web, Developing Applications for Wireless Devices</p>
                     </div>
-                    <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Bachelor Degree</h5><span class="item-details">University of Tokyo / 2008 - 2010</span>
-                      <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quo repudiandae.</p>
-                    </div>
-                    <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Master Degree</h5><span class="item-details">Harvard University / 2012 - 2015</span>
-                      <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quo repudiandae.</p>
-                    </div>
                   </div>
                 </div>
                 <!-- Experience part-->
@@ -301,12 +244,8 @@
                       <h5 class="item-title">Senior Software Engineer</h5><span class="item-details">CircleITC / 2017 - 2018</span>
                     </div>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Back-End Developer</h5><span class="item-details">Google / 2017 - 2018</span>
-                      <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quo repudiandae.</p>
-                    </div>
-                    <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">UI/UX Designer</h5><span class="item-details">Discord / 2019 - Present</span>
-                      <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quo repudiandae.</p>
+                      <h5 class="item-title">Freelancer</h5><span class="item-details">Fiverr, Upwork, ThemeForest / 2018 - Present</span>
+                      <p class="item-description">I spend lots of my time working remotely on Fiverr, Upwork, ThemeForest & with some of my fellow Programmers, building I.T Solutions and solving problems for companies around the world through these freelance platforms. You can reach out to me at paulotokolo98@gmail.com or <a href="wa.me/2348068243327" target="_blank">+234 806 824 3327</a> for more</p>
                     </div>
                   </div>
                 </div>
@@ -360,6 +299,18 @@
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
+                  <div class="single-skill" data-percentage="40">
+                    <div class="skill-info"><span class="skill-name">Python</span><span class="skill-percentage"></span></div>
+                    <div class="progress skill-progress">
+                      <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                  <div class="single-skill" data-percentage="60">
+                    <div class="skill-info"><span class="skill-name">ReactJs</span><span class="skill-percentage"></span></div>
+                    <div class="progress skill-progress">
+                      <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-12 col-md-6">
                   <div class="single-skill" data-percentage="80">
@@ -394,6 +345,18 @@
                   </div>
                   <div class="single-skill" data-percentage="100">
                     <div class="skill-info"><span class="skill-name">Influencer Marketing</span><span class="skill-percentage"></span></div>
+                    <div class="progress skill-progress">
+                      <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                  <div class="single-skill" data-percentage="100">
+                    <div class="skill-info"><span class="skill-name">SQL Database Management</span><span class="skill-percentage"></span></div>
+                    <div class="progress skill-progress">
+                      <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                  <div class="single-skill" data-percentage="100">
+                    <div class="skill-info"><span class="skill-name">Product Marketing</span><span class="skill-percentage"></span></div>
                     <div class="progress skill-progress">
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -618,7 +581,7 @@
           <li class="list-inline-item" style="background-color: #ffb100;" data-path="css/colors/main-darkyellow.css"></li>
         </ul>
         <div class="single-block buy-btn mb-0">
-          <a class="btn btn-success btn-sm" target="_blank" href="https://themeforest.net/item/kitzu-personal-portfolio-template/26075107" role="button">Buy Kitzu</a>
+          <a class="btn btn-success btn-sm" target="_blank" href="https://wa.me/2348068243327" role="button">Contact ME</a>
         </div>
       </div>
     </div>
