--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
                           <p>Paul-Caleb Otokolo</p>
                         </div>
                         <div class="col-12 col-md-6 single-info"><span>Email:</span>
-                          <p><a href="mailto:emma@example.com">paulotokolo98@gmail.com</a></p>
+                          <p><a href="mailto:paulotokolo98@gmail.com">paulotokolo98@gmail.com</a></p>
                         </div>
                       </div>
                       <div class="row">
                         <div class="col-12 col-md-6 single-info"><span>Phone:</span>
-                          <p><a href="wa.me/2348068243327" target="_blank">+234 806 824 3327</a></p>
+                          <p><a href="https://wa.me/2348068243327" target="_blank">+234 806 824 3327</a></p>
                         </div>
-                        <div class="col-12 col-md-6 single-info"><span>From:</span>
+                        <!-- <div class="col-12 col-md-6 single-info"><span>From:</span>
                           <p>Nigeria</p>
-                        </div>
+                        </div> -->
                       </div>
                     </address>
                     <div class="d-block d-sm-flex align-items-center"><a class="btn content-download button-main button-scheme" href="#0" role="button">Download CV</a>
@@ -138,64 +138,6 @@
                         <li class="list-inline-item"><a href="https://www.linkedin.com/in/paul-caleb-otokolo-1325811b4/" target="_blank"><i class="icon ion-logo-linkedin"></i></a></li>
                       </ul>
                     </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Testimonials section-->
-            <div class="testimonials-section single-section">
-              <div class="row">
-                <div class="col-12">
-                  <div class="section-heading">
-                    <p class="section-description">What my clients think about me</p>
-                    <h2 class="section-title">Testimonials</h2>
-                  </div>
-                </div>
-              </div>
-              <div class="my-slider">
-                <div class="slider-item">
-                  <!-- Single review-->
-                  <div class="single-review swiper-slide">
-                    <div class="review-header d-flex justify-content-between">
-                      <div class="review-client">
-                        <div class="media"><img class="img-fluid rounded-circle client-avatar" src="img/client-1.jpg" alt="Client">
-                          <div class="client-details">
-                            <h6 class="client-name">Julia Sakura</h6><span class="client-role">Envato Customer</span>
-                          </div>
-                        </div>
-                      </div><i class="icon ion-md-quote review-icon"></i>
-                    </div>
-                    <p class="review-content">Emma did an excellent creative job, addressing our request quickly, and also providing her own graphic insight, being open to feedback and changes or edits when they arose. She worked with us the entire way. Highly recommended.</p>
-                  </div>
-                </div>
-                <div class="slider-item">
-                  <!-- Single review-->
-                  <div class="single-review swiper-slide">
-                    <div class="review-header d-flex justify-content-between">
-                      <div class="review-client">
-                        <div class="media"><img class="img-fluid rounded-circle client-avatar" src="img/client-2.jpg" alt="Client">
-                          <div class="client-details">
-                            <h6 class="client-name">John Santana</h6><span class="client-role">Entrepreneur</span>
-                          </div>
-                        </div>
-                      </div><i class="icon ion-md-quote review-icon"></i>
-                    </div>
-                    <p class="review-content">Emma did an excellent creative job, addressing our request quickly, and also providing her own graphic insight, being open to feedback and changes or edits when they arose. She worked with us the entire way. Highly recommended.</p>
-                  </div>
-                </div>
-                <div class="slider-item">
-                  <!-- Single review-->
-                  <div class="single-review swiper-slide">
-                    <div class="review-header d-flex justify-content-between">
-                      <div class="review-client">
-                        <div class="media"><img class="img-fluid rounded-circle client-avatar" src="img/client-3.jpg" alt="Client">
-                          <div class="client-details">
-                            <h6 class="client-name">Maria Wilson</h6><span class="client-role">Envato Customer</span>
-                          </div>
-                        </div>
-                      </div><i class="icon ion-md-quote review-icon"></i>
-                    </div>
-                    <p class="review-content">Emma did an excellent creative job, addressing our request quickly, and also providing her own graphic insight, being open to feedback and changes or edits when they arose. She worked with us the entire way. Highly recommended.</p>
                   </div>
                 </div>
               </div>
@@ -245,7 +187,7 @@
                     </div>
                     <div class="resume-item"><span class="item-arrow"></span>
                       <h5 class="item-title">Freelancer</h5><span class="item-details">Fiverr, Upwork, ThemeForest / 2018 - Present</span>
-                      <p class="item-description">I spend lots of my time working remotely on Fiverr, Upwork, ThemeForest & with some of my fellow Programmers, building I.T Solutions and solving problems for companies around the world through these freelance platforms. You can reach out to me at paulotokolo98@gmail.com or <a href="wa.me/2348068243327" target="_blank">+234 806 824 3327</a> for more</p>
+                      <p class="item-description">I spend lots of my time working remotely on Fiverr, Upwork, ThemeForest & with some of my fellow Programmers, building I.T Solutions and solving problems for companies around the world through these freelance platforms. You can reach out to me at paulotokolo98@gmail.com or <a href="https://wa.me/2348068243327" target="_blank">+234 806 824 3327</a> for more</p>
                     </div>
                   </div>
                 </div>
@@ -529,14 +471,14 @@
                       <li>
                         <div class="media align-items-center"><span class="info-icon"><i class="icon ion-md-call"></i></span>
                           <div class="media-body info-details">
-                            <h6 class="info-type">Call Me</h6><span class="info-value"><a href="tel:+441632967704">+234 806 824 3327</a></span>
+                            <h6 class="info-type">Call Me</h6><span class="info-value"><a href="tel:+2348068243327">+234 806 824 3327</a></span>
                           </div>
                         </div>
                       </li>
                       <li>
                         <div class="media align-items-center"><span class="info-icon"><i class="icon ion-md-send"></i></span>
                           <div class="media-body info-details">
-                            <h6 class="info-type">Email Me</h6><span class="info-value"><a href="mailto:emma@example.com">paulotokolo98@gmail.com</a></span>
+                            <h6 class="info-type">Email Me</h6><span class="info-value"><a href="mailto:paulotokolo98@gmail.com">paulotokolo98@gmail.com</a></span>
                           </div>
                         </div>
                       </li>
