august 29th changes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
   </nav>
   <!-- Home-->
-  <section class="home-area element-cover-bg" id="home" style="background-image:url(img/home.jpg)">
+  <section class="home-area element-cover-bg" id="home" style="background-image:url(img/screenshotp.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center">
         <div class="col-12 col-lg-8 home-content text-center">
@@ -105,14 +105,14 @@
             <div class="info-section single-section">
               <div class="row align-items-center">
                 <!-- Picture part-->
-                <div class="col-12 col-lg-5 info-img"><img class="img-fluid img-thumbnail" src="img/info-img.jpg" alt="About Picture"></div>
+                <div class="col-12 col-lg-5 info-img"><img class="img-fluid img-thumbnail" src="img/screenshot.png" alt="About Picture"></div>
                 <!-- Content part-->
                 <div class="col-12 col-lg-7 info-content">
                   <div class="content-block">
                     <h2 class="content-subtitle">Who am i?</h2>
                     <h6 class="content-title">I'm Paul-Caleb Otokolo, a Full-Stack Web Developer and Designer</h6>
                     <div class="content-description">
-                      <p>I am a freelancer based in the Abuja, Nigeria and I have been developing noteworthy UX/UI designs and websites for years, which comply with the latest design trends. I help convert a vision and an idea into meaningful and useful products. Having a sharp eye for product evolution helps me prioritize tasks, iterate fast and deliver faster. Some of my skills are Logic Building and Elementary Programming, Building Next Generation Websites, Database Management, Application Programming, Introduction to Cloud Computing, Search Engine Optimization, Java, Introduction to Web and Entreprise Applications, Web Component Development(Servlets JSP), Architecting Applications for the Web(JSF Struts), Google App Engine with JAva, Google Android Development, Software Project Management, Google Advertising Fundamentals, Google Analytics, Securing Web Applications, Advanced Java, Working with Cloud Computing, Entreprise Application Development, Creating Services for the Web & Developing Applications for Wireless Devices. I'm currently learning Python and ReactJs.</p>
+                      <p>I am a freelancer based in the Abuja, Nigeria and I have been developing noteworthy UX/UI designs and websites for years, which comply with the latest design trends. I help convert a vision and an idea into meaningful and useful products. Having a sharp eye for product evolution helps me prioritize tasks, iterate fast and deliver faster. Some of my skills are Logic Building and Elementary Programming, Building Next Generation Websites, Database Management, Application Programming, Introduction to Cloud Computing, Search Engine Optimization, Java, Introduction to Web and Entreprise Applications, Web Component Development(Servlets JSP), Architecting Applications for the Web(JSF Struts), Google App Engine with Java, Google Android Development, Software Project Management, Google Advertising Fundamentals, Google Analytics, Securing Web Applications, Advanced Java, Working with Cloud Computing, Entreprise Application Development, Creating Services for the Web & Developing Applications for Wireless Devices. I'm currently learning Python and ReactJs.</p>
                     </div>
                     <address class="content-info">
                       <div class="row">
@@ -127,12 +127,13 @@
                         <div class="col-12 col-md-6 single-info"><span>Phone:</span>
                           <p><a href="https://wa.me/2348068243327" target="_blank">+234 806 824 3327</a></p>
                         </div>
-                        <!-- <div class="col-12 col-md-6 single-info"><span>From:</span>
-                          <p>Nigeria</p>
-                        </div> -->
+                        <div class="col-12 col-md-6 single-info"><span>Age:</span>
+                          <p>24</p>
+                        </div>
                       </div>
                     </address>
-                    <div class="d-block d-sm-flex align-items-center"><a class="btn content-download button-main button-scheme" href="#0" role="button">Download CV</a>
+                    <div class="d-block d-sm-flex align-items-center">
+                      <!-- <a class="btn content-download button-main button-scheme" href="#0" role="button">Download CV</a> -->
                       <ul class="list-unstyled list-inline content-follow">
                         <li class="list-inline-item"><a href="https://twitter.com/iampaulcaleb" target="_blank"><i class="icon ion-logo-twitter"></i></a></li>
                         <li class="list-inline-item"><a href="https://www.linkedin.com/in/paul-caleb-otokolo-1325811b4/" target="_blank"><i class="icon ion-logo-linkedin"></i></a></li>
